--- a/src/Components/Login/StylesLogin/_loginview.scss
+++ b/src/Components/Login/StylesLogin/_loginview.scss
@@ -1,11 +1,11 @@
-.conteinerButtonSignInGoogle{
+.conteinerLogin{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
     width: 100%;
     height: 100vh;
-    .signin {
+    .signinWithGoogle {
         margin-top: 3.75rem;
         float: right;
         max-width: 320px;
