--- a/src/Components/Sass/styles.scss
+++ b/src/Components/Sass/styles.scss
@@ -13,3 +13,7 @@
 @import '../Curriculums/PDFS/pdf';
 @import '../Login/StylesLogin/loginview';
 @import '../Login/StylesLogin/dashboardwrapper';
+@import '../Landing/landing';
+@import '../Login//StylesLogin//login';
+@import '../Login/StylesLogin/signoutbutton';
+@import '../Login//StylesLogin//profile';
