--- a/src/Components/Home/_home.scss
+++ b/src/Components/Home/_home.scss
@@ -1,13 +1,20 @@
-.containerTitleHome{
+.containerPrincipalHome{
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    h1{
-        margin: 60px 0;
+    justify-content: flex-start;
+    align-content: center;
+    .FirstContainerSonHome{
+        display: flex;
+        flex-direction: row;
+        section{
+            font-size: 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width: 50%;
+            height: 380px;
+            border: 2px solid red;
+        }
     }
 }
