--- a/src/Components/Landing/_landing.scss
+++ b/src/Components/Landing/_landing.scss
@@ -6,48 +6,8 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    color: white;
+    color: black;
     background-image: url(../../assets/pexels-krakograff-textures-124842124-20560363.jpg);
     background-position: center;
     background-size: cover;
-    .sectionOneLanding{
-        display: flex;
-        padding: 60px;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-        margin-top: 2rem;
-        position: relative;
-        border: 2px solid black;
-        border-radius: 8%;
-        background-image: url(../../assets/pexels-kubiceknov-924824.jpg);
-        background-position: center;
-        background-size:cover;
-        background-color: rgba(255, 255, 255, 0.5); /* Blanco semi-transparente */
-        .articleTitleLanding{
-            font-size: 22px;
-            margin-bottom: 16px;
-            display: flex;
-            color: (#FFFFFF);
-        }
-        .articleParrafoLanding{
-            font-size: 20px;
-            display: flex;
-        }
-        .articleButtonLoginLanding {
-            display: inline-block;
-            padding: 10px;
-            transition: transform 0.3s ease;
-          
-            // Estilos para cuando se hace hover
-            &:hover {
-              transform: scale(1.2); // Cambia el tamaño del ícono al 120% del tamaño original
-            }
-          
-            // Estilos para la animación cuando el mouse sale del área
-            &:not(:hover) {
-              transition: transform 0.3s ease; // Aplica la misma transición cuando el hover no está activo
-            }
-        }
-    }
 }
