--- a/src/Components/Jobs/_jobslist.scss
+++ b/src/Components/Jobs/_jobslist.scss
@@ -6,66 +6,8 @@
     gap: 40px;
     flex-wrap: wrap;
     .cardJobs {
-        width: 7em; /* Puedes mantener este tamaño fijo si lo deseas */
-        height: 10rem;
-        border-radius: 20px;
-        background: #f5f5f5;
-        position: relative;
-        padding: 1.8rem;
-        border: 2px solid #c3c6ce;
-        transition: 0.5s ease-out;
-        overflow: visible;
-    
-        // Ajuste para hacer el texto responsive
-        font-size: 1rem; // Establece un tamaño de fuente base
-    
-    &:hover {
-        border-color: #6c00f8;
-        box-shadow: 10px 5px 18px 0 rgba(255, 255, 255, 0.877);
-    
-        .card-button {
-        transform: translate(-50%, 50%);
-        opacity: 1;
-        }
+display: flex;
+border: 1px solid lightsalmon;
+flex-direction: column;
     }
-    }
-    
-    .cardJobsDetails {
-    color: rgb(162, 0, 255);
-    height: 100%;
-    gap: .5em;
-    display: grid;
-    place-content: center;
-    font-family: 'Courier New', Courier, monospace;
-    }
-    
-    .card-button {
-    text-decoration: none;
-    text-align: center;
-    transform: translate(-50%, 125%);
-    width: 70%;
-    border-radius: 1rem;
-    border: none;
-    background-color: #6c00f8;
-    color: #fff;
-    font-size: 1rem;
-    padding: .5rem 1rem;
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    opacity: 0;
-    transition: 0.3s ease-out;
-    cursor: pointer;
-    font-family: 'Courier New', Courier, monospace;
-    }
-    
-    .text-body {
-    color: rgb(134, 134, 134);
-    }
-    
-    .text-title {
-    font-size: 1.5em;
-    font-weight: bold;
-    }
-    
     }
