añadi la verificacion de email

--- a/src/Components/Sass/styles.scss
+++ b/src/Components/Sass/styles.scss
@@ -28,6 +28,7 @@
 @import '../Login/StylesLogin/loginview';
 @import '../Login/StylesLogin/profile';
 @import '../Login/StylesLogin/signoutbutton';
+@import '../Login/StylesLogin/phonesignin';
 
 @import '../Landing/landing';
 @import '../Landing/sectiononelanding';
