barmenu Completo Listo

--- a/src/Components/Jobs/AddJobs/_addjobs.scss
+++ b/src/Components/Jobs/AddJobs/_addjobs.scss
@@ -29,6 +29,9 @@
                 justify-content: center;
                 align-items: center;
                 gap: 0.5rem;
+                .conteinerRubroSelectAddJobs{
+                    width: 100%;
+                }
             }
             button{
                 display: flex;
