--- a/src/Components/Sass/styles.scss
+++ b/src/Components/Sass/styles.scss
@@ -22,6 +22,8 @@
 @import '../Jobs/AddJobs/addjobs';
 @import '../Jobs/firstsectionjobs';
 
+@import '../RubroSelect/rubroselect';
+
 @import '../Login/StylesLogin/dashboardwrapper';
 @import '../Login/StylesLogin/login';
 @import '../Login/StylesLogin/loginbutton';
