--- a/src/Components/BodyStyles/_bodystyles.scss
+++ b/src/Components/BodyStyles/_bodystyles.scss
@@ -6,7 +6,11 @@ $fuente-proyecto: 'Roboto', sans-serif;
 
 // Aplica la fuente al selector body
 body {
-    margin: 0;
-    padding: 0;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  font-size: 16px;
   font-family: $fuente-proyecto;
 }
