--- a/src/Components/Home/_secondcontainersonhome.scss
+++ b/src/Components/Home/_secondcontainersonhome.scss
@@ -1,50 +1,42 @@
-.SecondContainerSonHome {
-    margin-top: 60px;
+
+
+.SecondContainerSonHome{
+    border: 2px solid red;
+    margin-top: 8rem;
     display: flex;
-    justify-content: center; /* Añadido para centrar horizontalmente */
-    align-items: center; /* Añadido para centrar verticalmente */
-    section {
-        padding: 16px;
-        margin-top: 20px;
-        font-size: 20px;
-        border: 2px solid blue;
-        width: 60%;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-    }
+    width: 100%;
+
 }
+// .popup {
+//     position: fixed;
+//     top: 50%;
+//     left: 50%;
+//     transform: translate(-50%, -50%);
+//     background-color: white;
+//     border: 1px solid #ccc;
+//     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+//     padding: 20px;
+//     z-index: 9999;
 
-.popup {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    border: 1px solid #ccc;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: 20px;
-    z-index: 9999;
+//         &-content {
+//         position: relative;
+//         }
 
-        &-content {
-        position: relative;
-        }
-
-        .popup-content{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            section{
-                article{
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: center;
-                    align-items: center;
-                }
-            }
-            button {
-                display: flex;
-            }
-        }
-}
+//         .popup-content{
+//             display: flex;
+//             flex-direction: column;
+//             justify-content: center;
+//             align-items: center;
+//             section{
+//                 article{
+//                     display: flex;
+//                     flex-direction: column;
+//                     justify-content: center;
+//                     align-items: center;
+//                 }
+//             }
+//             button {
+//                 display: flex;
+//             }
+//         }
+// }
