--- a/src/Components/Jobs/AddJobs/_addjobs.scss
+++ b/src/Components/Jobs/AddJobs/_addjobs.scss
@@ -3,43 +3,61 @@
     width: 100%;
     justify-content: center;
     flex-direction: column;
-    border: 2px solid blue;
     .containerAddJobs{
         display: flex;
         justify-content: center;
         .containerFormAddJobs{
             display: flex;
-            border: 2px solid lightgreen;
             flex-direction: column;
             align-items: center;
-            width: 60%;
+            width: 80%;
+            .conteinerArticleObtenerFechaActual {
+                display: flex;
+                flex-direction: row; // Disposición en fila
+                align-items: center; // Alineación vertical centrada
+                justify-content: center; // Alineación horizontal centrada
+            }
             .containerInputAddJobs{
-                width: 100%;            
-                input{
-                    width: 100%;
-                }
+                width: 100%;
+                display: flex;
+                justify-content: space-between;            
             }
             svg{
                 width: 2.5rem;
                 height: 2.5rem;
             }
             form { 
+                border: none;
+
+                margin-bottom: 120px;
                 display: flex;
-                flex-direction: column;
-                justify-content: center;
+                flex-direction: row;
                 align-items: center;
-                gap: 0.5rem;
+                justify-content: space-around;
+                width: 100%;
+                input {
+                    margin-left: 1.25rem;
+                    width: 160px;
+                }
                 .conteinerRubroSelectAddJobs{
                     width: 100%;
                 }
-            }
-            button{
-                display: flex;
+                .conteinerRenderInputField{
+                    display: flex;
+                    flex-direction: column;
+                    width: 36%;
+                }
+                .conteinerRubroSelectAddJobs{
+                    height: 100%;
+                    display: flex;
+                    justify-content: space-around;
+                    flex-direction: column;
+                    width: 36%;
+                }
             }
         }
     }
     .containerTemplate{
-        border: 2px solid lightcoral;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -47,7 +65,6 @@
         padding: 80px 0;
         width: 100%;
         .template{
-            border: 2px solid limegreen;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -60,23 +77,9 @@
                 text-align: center;
                 align-items: center;
             }
-            h3{
-                border: 2px solid lightskyblue;
-            }
-            h2{
-                border: 2px solid lightgoldenrodyellow;
-            }
-            p{
-                border: 2px solid lightgreen;
-            }
             .containerButtonsTemplate{
                 display: flex;
                 gap: 0.75rem;
-                button{
-                    border: 2px solid red;
-                    border-radius: 0.625rem;
-                    padding: 0.625rem;
-                }
             }
         }
     }
