--- a/src/Components/Landing/_landing.scss
+++ b/src/Components/Landing/_landing.scss
@@ -4,7 +4,7 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content:space-around;
     align-items: center;
     color: black;
     background-image: url(../../assets/pexels-krakograff-textures-124842124-20560363.jpg);
