--- a/src/Components/Landing/_sectiononelanding.scss
+++ b/src/Components/Landing/_sectiononelanding.scss
@@ -1,27 +1,33 @@
 .sectionOneLanding{
+  
     display: flex;
-    padding: 50px;
+    padding: 1rem 0.8rem;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    margin-top: 100px;
     border-radius: 8%;
     background-color: rgba(255, 255, 255, 0.5); /* Blanco semi-transparente */
+    a{
+      color: black;
+      text-decoration: none;
+    }
     .articleTitleLanding{
         font-size: 22px;
-        margin-bottom: 16px;
+
         display: flex;
         color: black;
+        h1{
+          margin: 0;
+        }
     }
     .articleParrafoLanding{
-        font-size: 20px;
+      font-size: clamp(14px, 2vw, 16px); // El tamaño de la fuente se ajusta entre 12px y 24px según el ancho del viewport
         display: flex;
     }
     .articleButtonLoginLanding {
         display: flex;
         flex-direction: column;
         justify-content: center;
-        padding: 10px;
         transition: transform 0.3s ease;
       
         // Estilos para cuando se hace hover
@@ -42,5 +48,14 @@
             width: 100%;
            }
         }
+    }
+
+    .articleButtonLinkToCurriculumLanding {
+      display: flex;
+      Button{
+        padding: 0 0.375rem;
+        font-size: 12px;
+        width: 100%;
+      }
     }
 }
