--- a/src/Components/Login/StylesLogin/_login.scss
+++ b/src/Components/Login/StylesLogin/_login.scss
@@ -1,84 +1,104 @@
-.conteinerPrincipalLogin {
-display: flex;
-flex-direction: column;
-justify-content: center; /* Centra verticalmente */
-align-items: center; /* Centra horizontalmente */
-height: 100vh;
-background-color: #fefae0; /* Corrección de la sintaxis del color */
-background-image: url(../../../assets/pexels-krakograff-textures-124842124-9990209.jpg);
-background-position: center;
-background-size: cover;
-.sectionOneLogin {
+.conteinerLoginForm{
     display: flex;
-    padding: 60px;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: flex-start;
     align-items: center;
-    margin-top: 12px;
-    border-radius: 8%;
-    background-color: rgba(255, 255, 255, 0.5); /* Blanco semi-transparente */
-
-    p {
-        margin-bottom: 14px;
-    }
-
-    .articleOneLogin {
+.containerImgLoginRight {
+    display: flex;
+    width: 100%; /* Ajusta el ancho al 100% de su contenedor */
+    height: 100vh;
+}
+    .containerImgLoginLeft{
         display: flex;
-        flex-direction: column;
-        justify-content: center;
+        width: 100%; /* Ajusta el ancho al 100% de su contenedor */
+        height: 100vh;
+    }
+}
+
+
+
+
+// .conteinerPrincipalLogin {
+// display: flex;
+// flex-direction: column;
+// justify-content: center; /* Centra verticalmente */
+// align-items: center; /* Centra horizontalmente */
+// height: 100vh;
+// background-color: #fefae0; /* Corrección de la sintaxis del color */
+// background-image: url(../../../assets/pexels-krakograff-textures-124842124-9990209.jpg);
+// background-position: center;
+// background-size: cover;
+// .sectionOneLogin {
+//     display: flex;
+//     padding: 60px;
+//     flex-direction: column;
+//     justify-content: flex-start;
+//     align-items: center;
+//     margin-top: 12px;
+//     border-radius: 8%;
+//     background-color: rgba(255, 255, 255, 0.5); /* Blanco semi-transparente */
+
+//     p {
+//         margin-bottom: 14px;
+//     }
+
+//     .articleOneLogin {
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: center;
         
-        .formOneLogin {
-            display: flex;
-            margin-bottom: 1.125rem;
-            .coolinput {
-                display: flex;
-                flex-direction: column;
-                width: fit-content;
-                position: relative;
-                max-width: 240px;
-                }
+//         .formOneLogin {
+//             display: flex;
+//             margin-bottom: 1.125rem;
+//             .coolinput {
+//                 display: flex;
+//                 flex-direction: column;
+//                 width: fit-content;
+//                 position: relative;
+//                 max-width: 240px;
+//                 }
                 
-                .coolinput label.text {
-                font-size: 0.75rem;
-                color: #818CF8;
-                font-weight: 700;
-                position: relative;
-                top: 0.5rem;
-                margin: 0 0 0 7px;
-                padding: 0 3px;
-                background: #e8e8e8;
-                width: fit-content;
-                }
+//                 .coolinput label.text {
+//                 font-size: 0.75rem;
+//                 color: #818CF8;
+//                 font-weight: 700;
+//                 position: relative;
+//                 top: 0.5rem;
+//                 margin: 0 0 0 7px;
+//                 padding: 0 3px;
+//                 background: #e8e8e8;
+//                 width: fit-content;
+//                 }
                 
-                .coolinput input.input {
-                padding: 11px 10px;
-                font-size: 0.75rem;
-                border: 2px #818CF8 solid;
-                border-radius: 5px;
-                background: #e8e8e8;
-                }
+//                 .coolinput input.input {
+//                 padding: 11px 10px;
+//                 font-size: 0.75rem;
+//                 border: 2px #818CF8 solid;
+//                 border-radius: 5px;
+//                 background: #e8e8e8;
+//                 }
                 
-                .coolinput input.input:focus {
-                outline: none;
-                }
-        }
-    }
-}
+//                 .coolinput input.input:focus {
+//                 outline: none;
+//                 }
+//         }
+//     }
+// }
 
-    .sectionTwoLogin {
-        margin-top: 1.75rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: auto;
-        a {
-            text-decoration: none; // Quital el subrayado
-        }
-        p {
-            font-size: 1.25rem;
-            color: black;
-            font-weight: bold;
-        }
-    }
-}
+//     .sectionTwoLogin {
+//         margin-top: 1.75rem;
+//         display: flex;
+//         justify-content: center;
+//         align-items: center;
+//         width: 100%;
+//         height: auto;
+//         a {
+//             text-decoration: none; // Quital el subrayado
+//         }
+//         p {
+//             font-size: 1.25rem;
+//             color: black;
+//             font-weight: bold;
+//         }
+//     }
+// }
