--- a/src/Components/Courses/_courses.scss
+++ b/src/Components/Courses/_courses.scss
@@ -6,14 +6,26 @@
     align-items: center;
     width: 100%;
     .containerInfoCourses{
-        h2 {
-            margin: 40px 0;
-}
-        
-        p {
-            margin: 30px 0;
-            font-size: 18px ;}
-
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        display: flex;
+        flex-direction: column;
+        margin: 2rem 0 4rem 0;
+        .secondItemInfoCourses{
+            display: flex;
+            width: 60%;
+            border-radius: 8px;
+        }
+        .containerImgContainerInfoCourses{
+            display: flex;
+            width: 80%;
+            background-image: url('../../assets/pexels-krakograff-textures-124842124-20560363.jpg');
+            background-position: center;
+            background-size: contain;
+            border-radius: 8px;
+            height: 200px;
+        }
     }
 
     .containerCoursesList {
