--- a/src/Components/Courses/_courseslist.scss
+++ b/src/Components/Courses/_courseslist.scss
@@ -1,15 +1,14 @@
 .containerList{
 display: flex;
 width: 60%;
-border: 2px solid red;
 justify-content: center;
 align-items: center;
 gap: 40px;
 flex-wrap: wrap;
 .card {
-width: 190px;
-height: 254px;
-border-radius: 20px;
+width: 8.75rem;
+height: 15rem;
+border-radius: 8px;
 background: #f5f5f5;
 position: relative;
 padding: 1.8rem;
@@ -18,7 +17,7 @@ transition: 0.5s ease-out;
 overflow: visible;
 
 &:hover {
-    border-color: #6c00f8;
+    border-color: rgb(134, 134, 134);
     box-shadow: 10px 5px 18px 0 rgba(255, 255, 255, 0.877);
 
     .card-button {
@@ -29,7 +28,7 @@ overflow: visible;
 }
 
 .card-details {
-color: rgb(162, 0, 255);
+color: black;
 height: 100%;
 gap: .5em;
 display: grid;
@@ -44,7 +43,7 @@ transform: translate(-50%, 125%);
 width: 70%;
 border-radius: 1rem;
 border: none;
-background-color: #6c00f8;
+background-color: rgb(134, 134, 134);
 color: #fff;
 font-size: 1rem;
 padding: .5rem 1rem;
