--- a/src/Components/Sass/styles.css
+++ b/src/Components/Sass/styles.css
@@ -7,12 +7,27 @@
   align-items: center;
   width: 100%;
 }
-.containerCourses .containerInfoCourses h2 {
-  margin: 40px 0;
+.containerCourses .containerInfoCourses {
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  display: flex;
+  flex-direction: column;
+  margin: 2rem 0 4rem 0;
 }
-.containerCourses .containerInfoCourses p {
-  margin: 30px 0;
-  font-size: 18px;
+.containerCourses .containerInfoCourses .secondItemInfoCourses {
+  display: flex;
+  width: 60%;
+  border-radius: 8px;
+}
+.containerCourses .containerInfoCourses .containerImgContainerInfoCourses {
+  display: flex;
+  width: 80%;
+  background-image: url("../../assets/pexels-krakograff-textures-124842124-20560363.jpg");
+  background-position: center;
+  background-size: contain;
+  border-radius: 8px;
+  height: 200px;
 }
 .containerCourses .containerCoursesList {
   width: 100%;
@@ -34,16 +49,15 @@
 .containerList {
   display: flex;
   width: 60%;
-  border: 2px solid red;
   justify-content: center;
   align-items: center;
   gap: 40px;
   flex-wrap: wrap;
 }
 .containerList .card {
-  width: 190px;
-  height: 254px;
-  border-radius: 20px;
+  width: 8.75rem;
+  height: 15rem;
+  border-radius: 8px;
   background: #f5f5f5;
   position: relative;
   padding: 1.8rem;
@@ -52,7 +66,7 @@
   overflow: visible;
 }
 .containerList .card:hover {
-  border-color: #6c00f8;
+  border-color: rgb(134, 134, 134);
   box-shadow: 10px 5px 18px 0 rgba(255, 255, 255, 0.877);
 }
 .containerList .card:hover .card-button {
@@ -60,7 +74,7 @@
   opacity: 1;
 }
 .containerList .card-details {
-  color: rgb(162, 0, 255);
+  color: black;
   height: 100%;
   gap: 0.5em;
   display: grid;
@@ -74,7 +88,7 @@
   width: 70%;
   border-radius: 1rem;
   border: none;
-  background-color: #6c00f8;
+  background-color: rgb(134, 134, 134);
   color: #fff;
   font-size: 1rem;
   padding: 0.5rem 1rem;
@@ -127,7 +141,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 4rem;
+  margin-top: 2rem;
   border-radius: 0.6rem;
   width: 80%;
   height: 7.5rem;
@@ -137,10 +151,18 @@
 }
 
 .SecondContainerSonHome {
-  border: 2px solid red;
   margin-top: 8rem;
   display: flex;
   width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+.SecondContainerSonHome .containerStackSecondContainerSonHome {
+  display: flex;
+  width: 90%;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .containerPrincipalThirdContainerSonHome {
@@ -152,7 +174,11 @@
   width: 94%;
   gap: 1rem;
   margin-top: 10rem;
-  padding: 0.25rem;
+  padding: 1rem;
+}
+.containerPrincipalFourthContainerSonHome .stackContainerPrincipalFourthContainerSonHome {
+  display: flex;
+  gap: 1rem;
 }
 
 @media (max-width: 425px) {
@@ -165,7 +191,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    gap: 0.5rem;
+    gap: 1rem;
   }
 }
 body {
