--- a/src/Components/Sass/styles.scss
+++ b/src/Components/Sass/styles.scss
@@ -15,6 +15,7 @@
 @import '../Cart/cart';
 
 @import '../Curriculums/curriculums';
+@import '../Curriculums/sectiononecurriculums';
 @import '../Curriculums/PDFS/pdf';
 
 @import '../Jobs/jobs';
